Better naming for api methods, added spring data with hibernate, added entity, mapper, repository, service
